<resources>
    <string name="app_name">ESHC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_guard_toolbar_title">Сотрудники на объектах</string>
    <string name="frag_guard_late_toolbar_title">Опоздавшие сотрудники</string>
    <string name="frag_home_toolbar_title">Дополнительно</string>
    <string name="frag_view_toolbar_title">Все объекты онлайн</string>
    <string name="add_itemsLateList">Добавить текущего сотрудника в список "Опоздавших"</string>
    <string name="add_itemsLateList_new">Добавить нового сотрудника в список "Опоздавших"</string>
    <string name="update_object">Редактировать данные по объекту</string>
    <string name="update_guard">Редактировать данные по охраннику</string>
    <string name="menu_item_add">Добавить новый объект</string>
    <string name="menu_guard_add">Добавить нового охранника</string>
    <string name="menu_guard_update">Изменить данные охранника</string>
    <string name="change">изменить</string>
    <string name="logIn">войти</string>
    <string name="menu_item_update">Изменить данные объекта</string>
    <string name="menu_item_delete">Удалить объект</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_save">Сохранить</string>
    <string name="frag_itemRoom_toolbar_title">Сохраненные объекты</string>
    <string name="frag_itemRoomSingle_toolbar_title">Сохраненный объект</string>
    <string name="et_hint_name">Введите Фамилию, Имя</string>
    <string name="et_hint_objectName">Введите название объекта</string>
    <string name="et_hint_address">Введите адрес</string>
    <string name="et_hint_object_phone">Введите номер телефона</string>
    <string name="et_hint_mobile_phone">Введите номер мобильного телефона</string>
    <string name="et_hint_kurator">Введите имя куратора</string>
    <string name="kurator">Куратор</string>
    <string name="phone_number">номер телефона</string>
    <string name="enter_object_name">Введите имя объекта</string>
    <string name="new_object_created">Создан новый объект</string>
    <string name="_08_00">08:00</string>
    <string name="_15_00">15:00</string>
    <string name="_21_00">21:00</string>
    <string name="_00_00">00:00</string>
    <string name="_02_00">02:00</string>
    <string name="_04_00">04:00</string>
    <string name="_06_00">06:00</string>
    <string name="until">до:</string>
    <string name="start_from">Начиная с:</string>
    <string name="find">Найти</string>
    <string name="get_objects_for_period">Выбрать объекты за период</string>
    <string name="register">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="e_mail">Электронная почта</string>
    <string name="userName">Имя пользователя</string>
    <string name="exit">Выйти</string>
    <string name="cars">Авто E.S</string>
    <string name="staff_ES">Сотрудники E.S</string>
    <string name="work_place">место работы</string>
    <string name="info_eshc_com">Info@eshc.com</string>
</resources>