<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profileImage"
                style="@style/shapeImageView"
                app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView" />

            <EditText
                android:id="@+id/et_emailLogin"
                style="@style/editText_text"
                android:autofillHints=" "
                android:drawableStart="@drawable/custom_email"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_passwordLogin"
                style="@style/editText_text"
                android:autofillHints=""
                android:drawableStart="@drawable/custom_password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                style="@style/button_blue_save"
                android:layout_width="match_parent"
                android:text="@string/logIn"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/txt_register"
                style="@style/constraint_bottom_sheet"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/red_dark" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>