<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_4dp"
    tools:context=".onboarding.screens.bottomNavigation.FragmentItemRoomByDateSelected">

    <TextView
        android:id="@+id/fragmentItemRoomBottomSheet_textView"
        style="@style/textView_large"
        android:text="@string/get_objects_for_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentItemRoomBottomSheet_et_1"
        style="@style/textView_calendar"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/start_from"
        app:drawableStartCompat="@drawable/ic_calendar_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentItemRoomBottomSheet_textView" />

    <TextView
        android:id="@+id/fragmentItemRoomBottomSheet_et_2"
        style="@style/textView_calendar"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/until"
        app:drawableStartCompat="@drawable/ic_calendar_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentItemRoomBottomSheet_et_1" />

    <Button
        android:id="@+id/fragmentItemRoomBottomSheet_button"
        style="@style/button_blue_save"
        android:foreground="?attr/selectableItemBackground"
        android:state_enabled="true"
        android:text="@string/find"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/fragmentItemRoomBottomSheet_et_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_FragmentItemRoomBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentItemRoomBottomSheet_button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>