<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fragmentHomeCustomMainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="@dimen/margin_10"
                android:text="@string/info_eshc_com"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_profileUsername"
                style="@style/editText_text_short"
                android:autofillHints=""
                android:drawableStart="@drawable/custom_face"
                android:hint="@string/userName" />

            <EditText
                android:id="@+id/et_profileEmail"
                style="@style/editText_text_short"
                android:autofillHints=""
                android:drawableStart="@drawable/custom_email"
                android:hint="@string/e_mail" />

            <Button
                android:id="@+id/btn_profileSaveInfo"
                style="@style/button_blue_save"
                android:text="@string/change"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_main"
                android:background="@color/colorBlack" />

            <LinearLayout
                android:id="@+id/container_staff"
                style="@style/constraint_bottom_sheet"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_people_black"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_large"
                    android:text="@string/staff_ES"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_cars"
                style="@style/constraint_bottom_sheet"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_cars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_car_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_guard_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_large"
                    android:text="@string/cars"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintBottom_toBottomOf="@+id/img_cars"
                    app:layout_constraintStart_toEndOf="@+id/img_cars"
                    app:layout_constraintTop_toTopOf="@+id/img_cars" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_profile_signOut"
                style="@style/constraint_bottom_sheet"
                android:layout_margin="@dimen/margin_main"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/red_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_cars" />

        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profileImage"
            style="@style/shapeImageView"
            app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_camera"
            style="@style/shapeImageView_small"
            android:layout_alignEnd="@+id/iv_profileImage"
            android:layout_alignBottom="@+id/iv_profileImage"
            android:layout_marginEnd="-20dp"
            android:layout_marginBottom="-15dp"
            android:contentDescription=""
            app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
            app:srcCompat="@drawable/camera" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
