<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_start_end"
    tools:context=".onboarding.screens.PopUpFragment">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_add_item_late"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:src="@drawable/ic_guard_late"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"

        />

    <TextView
        android:id="@+id/txt_add_item_late"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_itemsLateList"
        android:textSize="@dimen/text_size_large"
        android:layout_marginStart="@dimen/padding_start_end"
        app:layout_constraintBottom_toBottomOf="@+id/img_add_item_late"
        app:layout_constraintStart_toEndOf="@+id/img_add_item_late"
        app:layout_constraintTop_toTopOf="@+id/img_add_item_late" />

    <ImageView
        android:id="@+id/img_item_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_add_item_late"

        />

    <TextView
        android:id="@+id/txt_item_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="@dimen/text_size_large"
        android:layout_marginStart="@dimen/padding_start_end"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_update"
        app:layout_constraintStart_toEndOf="@+id/img_item_update"
        app:layout_constraintTop_toTopOf="@+id/img_item_update" />

    <ImageView
        android:id="@+id/img_item_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:src="@drawable/ic_library_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_item_update"

        />

    <TextView
        android:id="@+id/txt_item_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_item_add"
        android:textSize="@dimen/text_size_large"
        android:layout_marginStart="@dimen/padding_start_end"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_add"
        app:layout_constraintStart_toEndOf="@+id/img_item_add"
        app:layout_constraintTop_toTopOf="@+id/img_item_add" />

    <ImageView
        android:id="@+id/img_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_item_add"

        />

    <TextView
        android:id="@+id/txt_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_item_delete"
        android:textSize="@dimen/text_size_large"
        android:layout_marginStart="@dimen/padding_start_end"
        app:layout_constraintBottom_toBottomOf="@+id/img_delete"
        app:layout_constraintStart_toEndOf="@+id/img_delete"
        app:layout_constraintTop_toTopOf="@+id/img_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>